--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+src/fake-data
+src/db.json
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -21,5 +24,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-src/fake-data
