--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazily": "^0.9.2",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.2",
